Ensure second line of message body is never visible in LeftPane

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -2933,7 +2933,6 @@ $timer-icons: '55', '50', '45', '40', '35', '30', '25', '20', '15', '10', '05',
 
   @include font-body-2;
 
-  height: 1.4em;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
